# llm-3d-world-interaction-demo

./: README.md  export_presets.cfg  icon.svg.import  project.godot
addons/gdscript_formatter/: gdscript_formatter.gd.uid
addons/proto_controller/: proto_controller.gd.uid  proto_controller.tscn
assets/hdri/: lonely_road_afternoon_puresky_1k.hdr.import
assets/images/: .gdignore
assets/import_examples/: wall_arched_with_collider.glb.import
assets/music/: time_for_adventure.mp3.import
assets/skeleton/: skeleton_mage.glb.import  skeleton_mage_skeleton_texture.png.import
assets/sky_background/: autumn_field_puresky_4k.hdr.import
assets/zombie/: zombie.glb.import  zombie_albedo.png.import  zombie_idle.glb.import  zombie_jump.glb.import  zombie_run.glb.import
models/: dungeon_albedo.png.import  mat_dungeon.tres
models/building/: ceiling.glb.import  floor_stone.glb.import  floor_wood.glb.import  pillar.glb.import  wall.glb.import  wall_arched.glb.import  wall_archedwindow_gated.glb.import  wall_corner.glb.import  wall_cracked.glb.import  wall_doorway.glb.import  wall_half_endcap.glb.import  (+3 more)
scenes/: maiCEA9.tmp  main.tscn
scripts/: commons.gd  commons.gd.uid  llm_interaction.gd  llm_interaction.gd.uid  main.gd  main.gd.uid
scripts/pyscript/: README.md  api_tongyi_vl.py  glb_json_handler.py  godot_scene_handler.py  image_server.py  pyproject.toml  rag_interaction.py
scripts/pyscript/assets/: all_model_info.csv  all_model_info.json  all_model_info.xlsx  all_node_info.csv  all_node_info.json  all_node_info.xlsx  function_callback.json
(+47 files in other folders)
