[project]
name = "llm-3d-world-interaction"
version = "0.1.0"
description = "基于Godot实现LLM与3D场景交互"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-bailian20231229==2.0.0",
    "dashscope>=1.22.1",
    "openai>=1.65.1",
    "pillow",
    "pyautogui",
    "pygetwindow",
    "pygltflib>=1.16.3",
    "pywin32>=308",
]
